@@ -78,6 +78,7 @@ Valid aggressive masks include:  \n\r\
 message=[msg] something for the mob to say whenever he's fixing to attack\n\r\
 delay=x (makes the mob delay x ticks before looking for a victim) \n\r\
 mobkill (makes this behavior attack mobs as well as players) \n\r\
+nogang (makes this behavior pass over players already in combat) \n\r\
 misbehave (makes this mob attack even when wounded or a follower) \n\r\
 checklevel (makes this mob attack only those within 5 levels below him) \n\r\
 See AHELP ZAPPERMASK, where allowed is aggressed, and disallowed is spared. 
@@ -940,6 +941,7 @@ Valid aggressive masks include:  \n\r\
 message=[msg] something for the mob to say whenever he's fixing to attack\n\r\
 delay=x (makes the mob delay x ticks before looking for a victim) \n\r\
 mobkill (makes this behavior attack mobs as well as players) \n\r\
+nogang (makes this behavior pass over players already in combat) \n\r\
 misbehave (makes this mob attack even when wounded or a follower) \n\r\
 checklevel (makes this mob attack only those within 5 levels below him) \n\r\
 See AHELP ZAPPERMASK, where allowed is attacked, and disallowed is spared. 
@@ -2316,6 +2318,7 @@ the mob will attack anyone within 8 levels. Valid aggressive masks include:  \n\
 message=[msg] something for the mob to say whenever he's fixing to attack\n\r\
 delay=x (makes the mob delay x ticks before looking for a victim) \n\r\
 mobkill (makes this behavior attack mobs as well as players) \n\r\
+nogang (makes this behavior pass over players already in combat) \n\r\
 misbehave (makes this mob attack even when wounded or a follower) \n\r\
 See AHELP ZAPPERMASK, where allowed is attacked, and disallowed is spared. 
 
