@@ -28,6 +28,7 @@
  27. New property: Prop_LimitedEquip, for limiting the number of times a specific item can be equipped
  28. New Scriptable trigger: putting_prog 
  29. New locales for Sailing Ship prototyping: ShipDeck, ShipLightGunDeck, ShipHold, ShipMagazine, ShipQuarter, etc.
+ 30. New Aggressive behaviors option: NOGANG.. to prevent aggro mobs from ganging up on players
 
 # Build 5.9.8 Release 4/8/2019
   1. New skills: Informant, AutoSwipe, Find Clan Home, Find Clan Ship, Letter of Marque
